--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-plugin-macros": "^3.1.0",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
