--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^28.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
